# INF_Search

./: CMakeLists.txt  README.md  config.yaml  export.py  lemma_create_dict.py  main.cpp  main.py  test.py  test2.py
